chore(deps): update all non-major dependencies (#141)
* chore(deps): update all non-major dependencies

* chore: Use io.micrometer:micrometer-registry-cloudwatch2

* chore: Use OpenRewrite to migrate code to Spring Boot 3.3

* chore: Update badges

* chore: Use OpenRewrite to migrate code to Java 21

* fix: Add flyway-database-postgresql

* fix: Add Spring Boot SBOM support

* fix: Remove static imports from cdk

* fix: Remove statically imported constants

* fix: Remove static imports (Mockito, ArgumentMatchers, Matchers)

* fix: Remove static imports (SecurityMockMvcRequestPostProcessors, MockMvcRequestBuilders, MockMvcResultHandlers, MockMvcResultMatchers)

---------

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
Co-authored-by: Branislav Beno <brano.beno@gmail.com>