@@ -1,7 +1,6 @@
 package com.book.library.cdk.construct;
 
-import static java.util.Arrays.asList;
-
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
@@ -171,7 +170,7 @@ public class Network extends Construct {
                         createParameterName(appEnvironment, PARAMETER_ISOLATED_SUBNET_TWO))
                 .getStringValue();
 
-        return asList(subnetOneId, subnetTwoId);
+        return Arrays.asList(subnetOneId, subnetTwoId);
     }
 
     private static List<String> getPublicSubnetsFromParameterStore(
@@ -189,7 +188,7 @@ public class Network extends Construct {
                         createParameterName(appEnvironment, PARAMETER_PUBLIC_SUBNET_TWO))
                 .getStringValue();
 
-        return asList(subnetOneId, subnetTwoId);
+        return Arrays.asList(subnetOneId, subnetTwoId);
     }
 
     private static List<String> getAvailabilityZonesFromParameterStore(
@@ -207,7 +206,7 @@ public class Network extends Construct {
                         createParameterName(appEnvironment, PARAMETER_AVAILABILITY_ZONE_TWO))
                 .getStringValue();
 
-        return asList(availabilityZoneOne, availabilityZoneTwo);
+        return Arrays.asList(availabilityZoneOne, availabilityZoneTwo);
     }
 
     private static String getLoadBalancerArnFromParameterStore(Construct scope, ApplicationEnvironment appEnvironment) {
@@ -255,7 +254,7 @@ public class Network extends Construct {
         return Vpc.Builder.create(this, "vpc")
                 .natGateways(0)
                 .maxAzs(2)
-                .subnetConfiguration(asList(publicSubnets, isolatedSubnets))
+                .subnetConfiguration(Arrays.asList(publicSubnets, isolatedSubnets))
                 .build();
     }
 
@@ -392,7 +391,7 @@ public class Network extends Construct {
         // (https://github.com/aws/aws-cdk/issues/3586).
         StringParameter.Builder.create(this, PARAMETER_AVAILABILITY_ZONE_ONE)
                 .parameterName(createParameterName(appEnvironment, PARAMETER_AVAILABILITY_ZONE_ONE))
-                .stringValue(vpc.getAvailabilityZones().get(0))
+                .stringValue(vpc.getAvailabilityZones().getFirst())
                 .build();
 
         StringParameter.Builder.create(this, PARAMETER_AVAILABILITY_ZONE_TWO)
@@ -404,7 +403,7 @@ public class Network extends Construct {
         // (https://github.com/aws/aws-cdk/issues/3586).
         StringParameter.Builder.create(this, "isolatedSubnetOne")
                 .parameterName(createParameterName(appEnvironment, PARAMETER_ISOLATED_SUBNET_ONE))
-                .stringValue(this.vpc.getIsolatedSubnets().get(0).getSubnetId())
+                .stringValue(this.vpc.getIsolatedSubnets().getFirst().getSubnetId())
                 .build();
 
         StringParameter.Builder.create(this, "isolatedSubnetTwo")
@@ -416,7 +415,7 @@ public class Network extends Construct {
         // (https://github.com/aws/aws-cdk/issues/3586).
         StringParameter.Builder.create(this, "publicSubnetOne")
                 .parameterName(createParameterName(appEnvironment, PARAMETER_PUBLIC_SUBNET_ONE))
-                .stringValue(this.vpc.getPublicSubnets().get(0).getSubnetId())
+                .stringValue(this.vpc.getPublicSubnets().getFirst().getSubnetId())
                 .build();
 
         StringParameter.Builder.create(this, "publicSubnetTwo")
